@@ -1,4 +1,5 @@
 ver 0.23.4 (not yet released)
+* fix crash or debug builds if startup fails
 
 ver 0.23.3 (2021/10/31)
 * protocol
